rename query param rows to tail
